fix layout problems

--- a/style.css
+++ b/style.css
@@ -24,17 +24,17 @@
     font-size: 34px;
     font-weight: bold;
     letter-spacing: 20px;
-    text-align: center;
-    padding-top: 180px;
-    padding-bottom: 80px;
     color: hsl(186, 14%, 43%);
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 80px;
 }
 
 .inner-container {
-    display: flex;
     background-color: #fff;
     height: 100%;
     width: 50%;
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
     border-radius: 30px;
@@ -45,16 +45,18 @@
     flex-direction: column;
     font-family: 'Space Mono', monospace;
     font-size: 20px;
-    background-color: hsl(189, 41%, 97%);
     font-weight: bold;
-    padding: 150px;
-    margin: 20px;
     height: 100%;
+    width: 50%;
+    padding: 30px;
+}
+
+.left-inner {
     width: 100%;
+    background-color: hsl(180, 83%, 40%);
 }
 
 .bill {
-    background-color: red;
     display: flex;
     flex-direction: column;
 }
@@ -68,49 +70,63 @@
 
 .select-type {
     display: flex;
+    flex-direction: column;
     border: 1px solid black;
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+}
+
+.tip {
+    padding-left: 10px;
 }
 
 .boxes {
-    border: 1px solid black;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 100%;
+    justify-content: center;
     width: 100%;
+    gap: 10px;
 }
 
 .box {
-    display: flex;
-    justify-content: flex-start;
     background-color: #e3e3e3;
     height: 20px;
-    width: 55px;
-    border: 7px solid blue;
-    padding: 10px;
+    width: 30%;
 }
 
 .input-box {
     height: 20px;
-    width: 55px;
+    width: 30%;
+}
+
+.people {
     border: 1px solid black;
-    border: 7px solid blue;
-    padding: 10px;
+}
+
+.people .title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    padding: 30px;
+}
+
+.right .right-inner {
+    width: 100%;
+    height: 100%;
+    background-color: hsl(183, 100%, 15%);
+    border-radius: 14px;
     font-family: 'Space Mono', monospace;
     font-size: 20px;
     font-weight: bold;
-    background-color: hsl(183, 100%, 15%);
-    padding: 150px;
-    margin: 50px;
-    border-radius: 14px;
     color: #fff;
-    height: 100%;
-    width: 100%;
 }
 
 .input-reset {
@@ -120,8 +136,4 @@
     background-color: #9FE8DF;
     border-radius: 6px;
     padding: 8px;
-}
-
-.people {
-    border: 1px solid black;
 }
